Make sure the page-toc doesn't jump with content adjustments

--- a/assets/sass/rhelements.scss
+++ b/assets/sass/rhelements.scss
@@ -305,7 +305,7 @@ main {
     margin-right: 2rem;
     
     @media (min-width: 1200px) {
-      max-width: 60vw;
+      max-width: 55vw;
     }
     
     #posts {
